--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             <h3>Hello!</h3>
             <h1>I <span style="color:#f87652">'</span>m Akshat Maheshwari</h1>
             <h2>Frontend Developer & Designer</h2>
-            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                Distinctio accusantium eligendi ab aspernatur sit sequi rem iure,
                 debitis impedit officia suscipit ut vitae ad sunt. In aliquid quaerat 
-                electus numquam non quisquam odit.</p> -->
+                electus numquam non quisquam odit.</p>
                 <div class="btn_container">
                   <button class="btn btn-light animate_animated">Hire Me</button>
                 </div>
