--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
           <div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
             <a class="navbar-brand text-white" href="#">Akshat Maheshwari<span style="color: #f87652;">.</span>
             </a>
-            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque atque exercitationem error reiciendis sapiente deleniti,
-               ipsum eveniet hic iure culpa!</p> -->
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque atque exercitationem error reiciendis sapiente deleniti,
+               ipsum eveniet hic iure culpa!</p>
                <div class="links">
                  <a href="https://www.facebook.com/amazingakshat1702"><i class="fa fa-facebook-square animate_animated"></i></a>
                  <a href="#"><i class="fa fa-instagram px-1 animate_animated"></i></a>
