--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
             <h3>Hello!</h3>
             <h1>I <span style="color:#f87652">'</span>m Akshat Maheshwari</h1>
             <h2>Frontend Developer & Designer</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            <p>
+<!--                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                Distinctio accusantium eligendi ab aspernatur sit sequi rem iure,
                 debitis impedit officia suscipit ut vitae ad sunt. In aliquid quaerat 
-                electus numquam non quisquam odit.</p>
+                electus numquam non quisquam odit. -->
+              </p>
                 <div class="btn_container">
                   <button class="btn btn-light animate_animated">Hire Me</button>
                 </div>
@@ -369,8 +371,10 @@
           <div class="logo-area col-lg-4 col-md-4 col-sm-12 col-12">
             <a class="navbar-brand text-white" href="#">Akshat Maheshwari<span style="color: #f87652;">.</span>
             </a>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque atque exercitationem error reiciendis sapiente deleniti,
-               ipsum eveniet hic iure culpa!</p>
+            <p>
+<!--                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque atque exercitationem error reiciendis sapiente deleniti,
+               ipsum eveniet hic iure culpa! -->
+              </p>
                <div class="links">
                  <a href="https://www.facebook.com/amazingakshat1702"><i class="fa fa-facebook-square animate_animated"></i></a>
                  <a href="#"><i class="fa fa-instagram px-1 animate_animated"></i></a>
