--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </div>
             <h4 id="info">maheshwariakshat482@gmail.com</h4>
             <div class="contactinfo">
-              <h5>Instagram:__akshat_maheshwari__</h5>
-              <h5>Whatsapp:9685970000</h5>
+<!--               <h5>Instagram:__akshat_maheshwari__</h5>
+              <h5>Whatsapp:9685970000</h5> -->
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-ms-12 col-xs-12 about-me-right-section">
